fixed dropdown flicker

--- a/src/components/dropDown.css
+++ b/src/components/dropDown.css
@@ -14,7 +14,6 @@ h1 {margin-top: 100px; text-align: center;
   width: 25vw;
 }
 .dropdown {
-  /* box-sizing: border-box; */
   position: relative;
   top: 0px;
   margin: 0 auto;
@@ -24,14 +23,20 @@ h1 {margin-top: 100px; text-align: center;
   border: 2px solid #466943;
   border-radius: 5vh;
   background: #282c34;
-  transition-duration: 0.5s;
+  transition-duration: 1s;
+
 }
 .dropdown.active {
-  box-sizing: border-box;
-  border-top-left-radius: 2.5vh;
-  border-top-right-radius: 2.5vh;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  border-radius: 2.5vh;
+  animation: htChange .5s ease-in-out forwards;
+}
+@keyframes htChange{
+  10%{
+    height: 6.5vh;
+  }
+  100%{
+    height: 47vh;
+  }
 }
 .dropdown__text {
   color: white;
@@ -66,7 +71,8 @@ h1 {margin-top: 100px; text-align: center;
 }
 .dropdown__items {
   box-sizing: border-box;
-
+  border-bottom-left-radius: 5vh;
+  border-bottom-right-radius: 5vh;
   position: relative;
   top: 0vh;
   visibility: hidden;
@@ -84,13 +90,11 @@ h1 {margin-top: 100px; text-align: center;
   max-height: 500%;
   opacity: 1;
   background-color: #282c34;
-  transition: max-height 1s, opacity 0.1s, visibility 0.1s ease-in-out;
+  transition: max-height 10s, opacity .2s .3s, visibility 0.1s ease-in-out;
 }
 
 .dropdown__item {
   cursor: pointer;
-  border-left: 2px solid #466943;
-  border-right: 2px solid #466943;
   padding: 15px 15px;
   color: white;
   font-weight: 400;
@@ -98,9 +102,8 @@ h1 {margin-top: 100px; text-align: center;
 }
 
 .dropdown__item:last-child {
-  border-bottom: 2px solid #466943;
-  border-bottom-left-radius: 2.5vh;
-  border-bottom-right-radius: 2.5vh;
+  border-bottom-left-radius: 5vh;
+  border-bottom-right-radius: 5vh;
 }
 
 .dropdown__item:hover {
